<resources>
    <string name="face_engine_init_fail">引擎初始化失败</string>
    <string name="ip">IP地址：</string>
    <string name="serial_num">SN：</string>
    <string name="mac_address">Mac地址：</string>
    <string name="close_door_delay">关门延时：</string>
    <string name="threshold">识别阈值：</string>
    <string name="threshold_hint">建议0.8及以上</string>
    <string name="retry_recognition_interval">失败重试间隔：</string>
    <string name="ir_live_threshold">IR活体检测阈值：</string>
    <string name="success_retry_recognition_interval">识别成功重试间隔：</string>
    <string name="show_mode">弹框显示：</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="add">添加</string>
    <string name="upload">上传</string>
    <string name="delete">删除</string>
    <string name="face_register">人脸注册</string>
    <string name="device_active">设备激活</string>
    <string name="active">激活</string>
    <string name="custom1">自定义</string>
    <string name="face_live_check">活体检测：</string>
    <string name="face_live_check_method">活体检测方式：</string>
    <string name="ir_face_live_preview">IR小窗口：</string>
    <string name="s">秒</string>
    <string name="recognition_distance">识别距离：</string>
    <string name="voice_mode">语音播报：</string>
    <string name="set_company_main_logo">主Logo：</string>
    <string name="set_company_second_logo">副Logo：</string>
    <string name="set_company_logo_result">*建议LOGO为透明的PNG图片，高150像素以内，宽300像素以内</string>
    <string name="welcome">欢迎光临</string>
    <string name="input_manage_password">请输入管理员密码</string>
    <string name="add_face_info">添加人脸信息</string>
    <string name="album">相册</string>
    <string name="photograph">拍照</string>
    <string name="local_batch_register">本地批量注册</string>
    <string name="local_usb_register">U盘注册</string>
    <string name="select_all">全选</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="server_port">端口号：</string>
    <string name="take_photo_retry">重拍</string>
    <string name="dialog_warn">提示</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_face_up_the_screen">请正视摄像头</string>
    <string name="main_logo_setting_success">主logo设置成功</string>
    <string name="second_logo_setting_success">副logo设置成功</string>
    <string name="delete_faces_complete">人脸删除完成!</string>
    <string name="batch_register_process_show">批量注册进度</string>
    <string name="recognition_success">识别成功</string>
    <string name="name">姓名</string>
    <string name="default_markup">默认标示</string>
    <string name="not_feedback">不反馈</string>
    <string name="recognition_failed">识别失败</string>
    <string name="show_setting">显示设置</string>
    <string name="recognition_distance_type1">很近</string>
    <string name="recognition_distance_type2">近</string>
    <string name="recognition_distance_type3">中等</string>
    <string name="recognition_distance_type4">较远</string>
    <string name="recognition_distance_type5">远</string>
    <string name="degree_0">0</string>
    <string name="degree_90">90</string>
    <string name="degree_180">180</string>
    <string name="degree_270">270</string>
    <string name="confirm_delete_main_logo">确认删除主Logo吗？</string>
    <string name="confirm_delete_second_logo">确认删除副Logo吗？</string>
    <string name="logo_not_exist">logo图片不存在，无需删除</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>
    <string name="device_reboot_every_day">每日重启：</string>
    <string name="device_sleep_setting">设备休眠：</string>
    <string name="follow_system">跟随系统</string>
    <string name="not_sleep">永不休眠</string>
    <string name="screen_default_bright_setting_switch">待机屏幕亮度：</string>
    <string name="colon">：</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="percent">%</string>
    <string name="index_screen_default_show">屏保开关：</string>
    <string name="please_input_arcface2_0_info">请填入ArcFace 3.1激活信息</string>
    <string name="read_local_active_info">一键式读取激活文件</string>
    <string name="app_id">APP_ID：</string>
    <string name="sdk_key">SDK_KEY：</string>
    <string name="active_key">ACTIVE_KEY：</string>
    <string name="not_empty">不能为空</string>
    <string name="device_active_tip1">没有激活码，请电脑端登录虹软开放平台</string>
    <string name="device_active_tip2">http://ai.arcsoft.com.cn/product/arcface.html</string>
    <string name="device_active_successful">设备激活成功</string>
    <string name="config_file_invalid">激活文件无效</string>
    <string name="config_file_not_complete">激活文件不完整</string>
    <string name="config_file_format_error">激活文件格式不正确</string>
    <string name="app_id_empty">APP_ID为空</string>
    <string name="sdk_key_empty">SDK_KEY为空</string>
    <string name="active_key_empty">ACTIVE_KEY为空</string>
    <string name="app_id_contain_special_char">APP_ID包含特殊字符</string>
    <string name="sdk_key_contain_special_char">SDK_KEY包含特殊字符</string>
    <string name="active_key_contain_special_char">ACTIVE_KEY包含特殊字符</string>
    <string name="upload_record_image">上传识别记录图片：</string>
    <string name="company_name_subtitle">下标文字:</string>
    <string name="company_setting_hint">如：公司名称或系统名称等，不超过10个字</string>
    <string name="main_logo_hint">显示在左上角</string>
    <string name="sub_logo_hint">显示在右下角，可以不设置</string>
    <string name="name_hide_last">姓*</string>
    <string name="show_mode_hint">自定义，如:{name}您好、{ID}您好</string>
    <string name="custom_input_hint">请输入自定义内容</string>
    <string name="success_preview_voice2">预置音：姓名</string>
    <string name="success_preview_voice3">预置音：识别成功</string>
    <string name="success_preview_voice4">预置音：欢迎光临</string>
    <string name="success_preview_voice5">预置音：门已打开</string>
    <string name="success_preview_voice6">预置音：门已打开，欢迎光临</string>
    <string name="fail_preview_voice2">预置音：嘟~（告警音）</string>
    <string name="fail_preview_voice3">预置音：识别失败</string>
    <string name="fail_preview_voice4">预置音：验证不通过</string>
    <string name="recognize_password_cannot_empty">请输入密码</string>
    <string name="recognize_password_wrong">密码错误，请重新输入</string>
    <string name="setting_image_invalid">选择的图片无效，请重新选择</string>
    <string name="face_manager_tip_common_fail">未知错误，请重试</string>
    <string name="face_manager_tip_detect_no_face_image">未检测到人脸</string>
    <string name="face_manager_tip_detect_no_face_video">未检测到人脸，请在“硬件适配”中确认角度是否正确</string>
    <string name="face_manager_tip_more_than_one_face">检测到多张人脸，请重新采集</string>
    <string name="face_manager_tip_degree_big_image">人脸偏转角度过大</string>
    <string name="face_manager_tip_degree_big_video">人脸偏转角度过大，请正视摄像头</string>
    <string name="face_manager_tip_recognize_fail">人脸特征数据提取失败，请重试</string>
    <string name="face_manager_tip_register_success">注册成功，正在刷新数据</string>
    <string name="face_manager_allow_pass">允许通行</string>
    <string name="face_manager_person_add_failed">人员添加失败，请重试</string>
    <string name="face_manager_person_add_face_failed">人员图片添加失败，请重试</string>
    <string name="face_manager_person_save_bitmap_failed">人员图片保存失败，请重试</string>
    <string name="unauthorized_access">您无权限通行</string>
    <string name="device_is_not_root">无法获取root权限</string>
    <string name="device_mac_address_empty">设备Mac地址获取失败，请打开wifi</string>
    <string name="device_storage_warn_tip1">存储空间不足，请及时清理空间！</string>
    <string name="device_storage_warn_tip3">存储空间严重不足，影响程序正常使用！</string>
    <string name="add_person_from_server_to_device">管理端正在向设备同步人脸数据，请稍后！</string>
    <string name="delete_person_from_server_to_device">管理端正在远程删除设备端人脸数据，请稍后！</string>
    <string name="batch_register_complete">注册完成，请核查注册结果！</string>
    <string name="save_picture_fail">保存失败</string>
    <string name="network_invalid">网络连接失败</string>
    <string name="ir_camera_warn">IR摄像头异常，请排查或更换活体检测方式！</string>
    <string name="access_control_settings">门禁机设置</string>
    <string name="recognition_settings">识别设置</string>
    <string name="custom_settings">个性化设置</string>
    <string name="camera_preview_size_setting">摄像头分辨率设置：</string>
    <string name="select_camera_preview_size_tip">请选择分辨率，使得两个摄像头内容一致，或者IR范围更大</string>
    <string name="preview_view_camera_position_zero">0</string>
    <string name="preview_view_camera_position_one">1</string>
    <string name="preview_frame_camera">预览画面摄像头：</string>
    <string name="preview_view_face_detect_degree">预览识别角度：</string>
    <string name="preview_view_face_detect_degree_tip">请选择正确的角度，保证APP显示视图能检测到人脸框</string>
    <string name="preview_frame">APP显示视图</string>
    <string name="adjustment_normal_degree_and_ratio">请调整至正常的角度和比例</string>
    <string name="rotate_90_degrees">旋转90度</string>
    <string name="width_height_interchange">宽高互换</string>
    <string name="mirror_image">镜像</string>
    <string name="face_rect_horizontal_mirror">脸框水平镜像</string>
    <string name="face_rect_vertical_mirror">脸框竖直镜像</string>
    <string name="recognition_algorithm_collection">识别算法采集：</string>
    <string name="recognition_algorithm_collection_tip">请调整以下两个识别算法采集视图，使得人脸框位置一致</string>
    <string name="horizontal_displacement">水平位移：</string>
    <string name="vertical_displacement">垂直位移：</string>
    <string name="save">保存</string>
    <string name="adaptation_info_save_success">适配信息保存成功</string>
    <string name="settings_save_success">保存设置参数成功</string>
    <string name="splash_bottom_tip">让刷脸无处不在</string>
    <string name="please_select_app_mode">请选择人脸识别应用模式：</string>
    <string name="current_app_mode_offline_lan">当前模式：离线局域网模式</string>
    <string name="offline_lan_mode">离线局域网模式</string>
    <string name="cloud_ai_ot_mode">云端模式</string>
    <string name="offline_lan_introduction">算法运行在设备终端，可配套管理客户端或自建平台在局域网环境使用</string>
    <string name="ai_cloud_introduction">主要是搭载ArcLink云端服务的模式或私有化部署服务，人脸注册等在云端服务控制的架构模式</string>
    <string name="please_input_ai_cloud_ip">请输入服务器地址：</string>
    <string name="current_app_mode_ai_cloud">当前模式：云端模式</string>
    <string name="select_app_mode_warn_tip1">请慎重选择架构模式</string>
    <string name="select_app_mode_warn_tip2">切换模式会引起部分数据不兼容或丢失</string>
    <string name="toast_select_app_mode">请选择应用模式</string>
    <string name="is_change_to">是否切换为：</string>
    <string name="question_mark">？</string>
    <string name="dialog_select_mode_warn1">人脸库无法兼容到云端模式，故将会清空所有数据，包括：人脸数据、识别记录</string>
    <string name="dialog_select_mode_warn2">将会对人脸数据做本地兼容，但识别记录将清空</string>
    <string name="operation_failed">操作失败</string>
    <string name="cleaning_data_please_wait">正在清理数据，请稍后</string>
    <string name="cleaning_data_complete">数据清理完成</string>
    <string name="current_mode_is_offline_lan_mode">已是离线局域网模式</string>
    <string name="current_mode_is_cloud_ai_ot_mode">已是云端模式</string>
    <string name="device_access">设备接入</string>
    <string name="device_access_id">接入码：</string>
    <string name="device_identify">设备标识：</string>
    <string name="server_ip_address">服务器地址：</string>
    <string name="device_unbinding">设备解绑</string>
    <string name="access_code_already_use">接入码已用</string>
    <string name="access_code_already_bind_device_warn">是否替换原设备？</string>
    <string name="access_code_already_bind_device_warn2">建议先对原设备解绑！</string>
    <string name="skip">跳过 ></string>
    <string name="mode_change">模式切换</string>
    <string name="submit_to">提交</string>
    <string name="input_register_person_name">请输入注册人姓名：</string>
    <string name="input_register_person_id">请输入注册人ID：</string>
    <string name="input_register_person_id_hint">工号或学号，可用于显示，可不填写</string>
    <string name="tips_add_face_info_batch">请先将照片批量拷入设备固定目录，注意照片名请命名为注册人姓名</string>
    <string name="tips_add_face_info_usb">先将照片批量拷进U盘，照片名请命名为注册人姓名</string>
    <string name="device_name">设备名称：</string>
    <string name="device_name_hint">标示设备，不超过10个字</string>
    <string name="upgrade_arc_face_sdk_warn1">算法SDK升级</string>
    <string name="upgrade_arc_face_sdk_warn2">人脸注册信息不兼容，需要重新注册</string>
    <string name="upgrade_arc_face_sdk_warn3">立即处理：程序将自动通过小图批量注册更新，可能存在注册失败的人员，请手动处理</string>
    <string name="immediate_processing">立即处理</string>
    <string name="temporarily">暂不</string>
</resources>