<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/tv_setting"
        android:layout_marginTop="@dimen/y50"
        android:text="@string/add_face_info" />

    <LinearLayout
        android:id="@+id/ll_face_register_select"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/y50"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_choose_photo"
            style="@style/tv_dialog_cancel"
            android:layout_gravity="center_horizontal"
            android:text="@string/album"
            android:textSize="@dimen/sp_34" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_take_photo"
            style="@style/tv_dialog_cancel"
            android:layout_gravity="center_horizontal"
            android:text="@string/photograph" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_batch_register"
            style="@style/tv_dialog_cancel"
            android:layout_gravity="center_horizontal"
            android:text="@string/local_batch_register" />

        <TextView
            android:layout_width="@dimen/x400"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y5"
            android:text="@string/tips_add_face_info_batch"
            android:textColor="@color/et_text_no_grey_color"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_usb_register"
            style="@style/tv_dialog_cancel"
            android:background="@drawable/enable_btn_add_face_info"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/et_text_color"
            android:text="@string/local_usb_register" />

        <TextView
            android:id="@+id/tv_usb_register_warn"
            android:layout_width="@dimen/x400"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y5"
            android:text="@string/tips_add_face_info_usb"
            android:textColor="@color/et_text_no_grey_color"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_dialog_cancel"
        android:layout_marginTop="@dimen/y40"
        style="@style/btn_dialog_cancel"
        android:text="@string/cancel" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"/>
</LinearLayout>
