<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_dialog_warn"
        android:layout_width="@dimen/x90"
        android:layout_height="@dimen/x90"
        android:layout_marginTop="@dimen/y30"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:background="@mipmap/ic_warn"/>

    <TextView
        android:id="@+id/tv_dialog_warning_content1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y15"
        android:layout_gravity="center_horizontal"
        android:text="@string/upgrade_arc_face_sdk_warn1"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_34"/>

    <TextView
        android:id="@+id/tv_dialog_warning_content2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y10"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/upgrade_arc_face_sdk_warn2"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_26"/>

    <TextView
        android:id="@+id/tv_dialog_warning_content3"
        android:layout_marginTop="@dimen/y30"
        android:layout_marginStart="@dimen/x45"
        android:layout_marginEnd="@dimen/x45"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_arc_face_sdk_warn3"
        android:textColor="@color/color_white_tran"
        android:textSize="@dimen/sp_24"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/y40">

        <Button
            android:id="@+id/btn_dialog_cancel"
            style="@style/btn_dialog_cancel"
            android:text="@string/temporarily"
            android:textSize="@dimen/sp_36"/>

        <Button
            android:id="@+id/btn_dialog_confirm"
            style="@style/btn_dialog_done"
            android:layout_toEndOf="@id/btn_dialog_cancel"
            android:layout_marginStart="@dimen/x44"
            android:textSize="@dimen/sp_36"
            android:text="@string/immediate_processing"/>
    </RelativeLayout>
</LinearLayout>