<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y40"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_common_dialog_warn"
            android:layout_width="@dimen/x48"
            android:layout_height="@dimen/x48"
            android:layout_gravity="center_vertical"
            android:background="@mipmap/ic_warn"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tv_dialog_title"
            style="@style/tv_setting"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/x20"
            android:text="@string/access_code_already_use" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/x30"
        android:layout_marginEnd="@dimen/x30"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_device_conflict_content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/color_white_tran"
            android:textSize="@dimen/sp_28"
            android:text="@string/access_code_already_bind_device_warn"/>

        <TextView
            android:id="@+id/tv_device_conflict_content2"
            android:layout_below="@id/tv_device_conflict_content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y5"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/color_white_tran"
            android:textSize="@dimen/sp_24"
            android:text="@string/access_code_already_bind_device_warn2"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/y45">

        <Button
            android:id="@+id/btn_dialog_confirm"
            style="@style/btn_dialog_done"
            android:text="@string/confirm"/>

        <Button
            android:id="@+id/btn_dialog_cancel"
            style="@style/btn_dialog_cancel"
            android:layout_toEndOf="@id/btn_dialog_confirm"
            android:layout_marginStart="@dimen/x44"
            android:text="@string/cancel"/>
    </RelativeLayout>
</LinearLayout>
