<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <import type="com.arcsoft.arcfacesingle.app.Constants" />

        <variable
            name="viewModel"
            type="com.arcsoft.arcfacesingle.viewmodel.SelectModeViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.arcsoft.arcfacesingle.view.widgets.CustomTopBar
            android:id="@+id/custom_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/custom_top_bar"
            android:layout_marginBottom="@dimen/y80">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x30"
                android:layout_marginEnd="@dimen/x30">

                <TextView
                    android:id="@+id/tv_please_select_mode"
                    style="@style/tv_setting"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/y50"
                    android:text="@string/please_select_app_mode" />

                <ImageView
                    android:id="@+id/iv_select_mode_warn"
                    android:layout_width="@dimen/x76"
                    android:layout_height="@dimen/y66"
                    android:layout_below="@id/tv_please_select_mode"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/y60"
                    android:background="@mipmap/ic_select_mode_warn" />

                <TextView
                    android:id="@+id/tv_select_mode_warn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_select_mode_warn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/y10"
                    android:text="@string/select_app_mode_warn_tip1"
                    android:textColor="@color/tv_select_mode_warn"
                    android:textSize="@dimen/sp_20" />

                <TextView
                    android:id="@+id/tv_select_mode_warn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_select_mode_warn1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/select_app_mode_warn_tip2"
                    android:textColor="@color/tv_select_mode_warn"
                    android:textSize="@dimen/sp_20" />

                <RadioGroup
                    android:id="@+id/rg_select_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_select_mode_warn2"
                    android:layout_marginStart="@dimen/x70"
                    android:layout_marginTop="@dimen/y60"
                    android:layout_marginEnd="@dimen/x70"
                    android:onCheckedChanged="@{viewModel::onSelectModeCheckedChanged}"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_offline_lan_mode"
                        style="@style/rb_setting_select_mode"
                        android:layout_width="@dimen/x350"
                        android:checked="@{viewModel.appMode == Constants.APP_MODE_OFFLINE_LAN}"
                        android:text="@string/offline_lan_mode" />

                    <TextView
                        android:id="@+id/tv_select_mode_introduction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/x37"
                        android:layout_marginTop="@dimen/y15"
                        android:text="@string/offline_lan_introduction"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/sp_24" />

                    <RadioButton
                        android:id="@+id/rb_cloud_ai_ot_mode"
                        style="@style/rb_setting_select_mode"
                        android:layout_width="@dimen/x350"
                        android:layout_marginTop="@dimen/y50"
                        android:checked="@{viewModel.appMode == Constants.APP_MODE_CLOUD_AI_OT}"
                        android:text="@string/cloud_ai_ot_mode" />

                    <TextView
                        android:id="@+id/tv_select_mode_introduction2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/x37"
                        android:layout_marginTop="@dimen/y15"
                        android:text="@string/ai_cloud_introduction"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/sp_24" />
                </RadioGroup>
            </RelativeLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_setting_save"
            style="@style/btn_setting_save"
            android:layout_alignParentBottom="true"
            android:onClick="@{viewModel::onClick}"
            android:text="@string/confirm" />
    </RelativeLayout>
</layout>