<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.arcsoft.arcfacesingle.viewmodel.DeviceInfoViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_screen_default"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.arcsoft.arcfacesingle.view.widgets.CustomTopBar
            android:id="@+id/custom_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/ll_server_ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/x30"
            android:layout_marginEnd="@dimen/x30">

            <TextView
                android:id="@+id/tv_device_key"
                style="@style/tv_setting"
                android:text="@string/device_name" />

            <EditText
                android:id="@+id/et_device_value"
                style="@style/ev_setting_width"
                android:layout_marginStart="@dimen/x50"
                android:layout_toEndOf="@+id/tv_device_key"
                android:hint="@string/device_name_hint"
                android:maxLength="30"
                android:text="@={viewModel.fieldDeviceName}" />
        </RelativeLayout>


        <Button
            android:id="@+id/btn_save"
            style="@style/btn_device_access"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x60"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/y50"
            android:onClick="@{viewModel::onClick}"
            android:paddingStart="@dimen/x25"
            android:paddingEnd="@dimen/x25"
            android:text="@string/save"
            android:textColor="@color/color_setting_btn_text" />
    </RelativeLayout>
</layout>